tests/miniJava/neg/004580_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( ) { return class java { public static void Main ( String [ ] java ) { { } } } 0 ; } }
